# PicoGlitcher

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  controller.py  glitcher.cpp
controller/: controller.py
controller/.ipynb_checkpoints/: AirTag Glitcher-checkpoint.ipynb  controller-checkpoint.ipynb
notebook/: AirTag Glitcher.ipynb  controller.ipynb
notebook/.ipynb_checkpoints/: AirTag Glitcher-checkpoint.ipynb
